added basic styling

--- a/index.html
+++ b/index.html
@@ -37,20 +37,26 @@
             <h2>My Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <img src="img/IMG_20191231_123456.jpg" alt="project image">
+                    <div class="description">
                     <h3>Project 1</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                    </div>
+                    <img src="img/IMG_20191231_123456.jpg" alt="project image">
                 </div>
                 <div class="project">
-                    <img src="img/IMG_20191231_123456.jpg" alt="project image">
+                <div class="description">
                     <h3>Project 2</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
+                     </div>
+                    <img src="img/IMG_20191231_123456.jpg" alt="project image">
                 </div>
                 <div class="project">
-                    <img src="img/IMG_20191231_123456.jpg" alt="project image">
+                <div class="description">
                     <h3>Project 3</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptatum.</p>
                 </div>
+                    <img src="img/IMG_20191231_123456.jpg" alt="project image">
+                 </div>
             </div>
         </section>
     </main>
